repl-backend/target/debug/build/io-lifetimes-0680d45655733c5c/stderr
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> <anon>:1:1
  |
1 | #![feature(rustc_attrs)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0554`.
warning: function is never used: `foo`
 --> <anon>:1:10
  |
1 | const fn foo() { panic!() }
  |          ^^^
  |
  = note: `#[warn(dead_code)]` on by default

warning: 1 warning emitted

